--- a/client/src/app/resources-page/resources-page.component.html
+++ b/client/src/app/resources-page/resources-page.component.html
@@ -4,21 +4,21 @@
       <div class="main__container">
         <div class="main__header">
           <h1 class="main__title">
-            <span class="main__title-custom">Виноградник</span> семейная церковь
+            <span class="main__title-custom">Виноградник</span> церковь
           </h1>
           <ul class="social__media-icons">
             <li>
-              <a href="">
+              <a href="Tel:+79135302209">
                 <i class="material-icons">call</i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="mailto:vinogradnikchurch@gmail.com">
                 <i class="material-icons">mail</i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://www.youtube.com/@user-be3qy1xt8h/videos">
                 <i class="material-icons">video_library</i>
               </a>
             </li>
@@ -43,52 +43,52 @@
               <tr>
                 <td>1</td>
                 <td>Богословие и философия Виноградника</td>
-                <td><a href="/uploads/theology/01.pdf" target="_blank">Читать</a></td>
+                <td><a href="/uploads/theology/01.pdf" target="_blank" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Джон Уибмер - Важность малых групп в церкви</td>
-                <td><a href="#" target="_blank">Читать</a></td>
+                <td><a href="/uploads/theology/02.pdf" target="_blank" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Джон Уибмер, Кевин Спрингер - Благовестие в силе Святого Духа</td>
-                <td><a href="#" target="_blank">Читать</a></td>
+                <td><a href="/uploads/theology/03.pdf" target="_blank" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>Джон Уибмер - Царство милости</td>
-                <td><a href="#" target="_blank">Читать</a></td>
+                <td><a href="/uploads/theology/04.pdf" target="_blank" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>5</td>
                 <td>Джон Уибмер, Кевин Спрингер - Исцеление силой Святого Духа</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/05.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>Джон Уибмер, Кевин Спрингер - Исцеление силой Святого Духа. Пособие по изучению</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/06.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>7</td>
                 <td>Джон Уибмер - Царство Жизни</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/07.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>8</td>
                 <td>Джон Уибмер - Служение Иисуса и миссия церкви</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/08.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>Джон Уибмер, Кевин Спрингер - Моменты силы</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/09.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>10</td>
                 <td>Александр Вентер - Творить дела Церкви. Строительство церкви снизу вверх</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/10.pdf" class="table__link">Читать</a></td>
               </tr>
             </tbody>
           </table>
@@ -106,52 +106,52 @@
               <tr>
                 <td>1</td>
                 <td>Кевин Леман, Уильям Пентак - Тропа пастыря</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/01.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Гери Чепмен - Пять языков любви</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/02.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Гери Чепмен - Пять языков любви для мужчин</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/03.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>Макс Лукадо - Бесстрашные</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/04.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>5</td>
                 <td>Генри Клауд, Джон Таунсенд - Барьеры</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/05.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>Генри Клауд, Джон Таунсенд - Искусство трудного разговора. Прикладная конфликтология</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/06.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>7</td>
                 <td>Гордон Д. Фи, Дуглас Стюарт - Как читать Библию и видеть всю ее ценность</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/07.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>8</td>
                 <td>Ричард Фостер - Прославление дисциплины</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/08.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>Клайв Стейплз Льюис - Просто христианство</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/09.pdf" class="table__link">Читать</a></td>
               </tr>
               <tr>
                 <td>10</td>
                 <td>Джон Мак-Артур- Свобода и сила прощения</td>
-                <td><a href="#">Читать</a></td>
+                <td><a href="/uploads/theology/10.pdf" class="table__link">Читать</a></td>
               </tr>
             </tbody>
           </table>
