--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -115,6 +115,9 @@
                     </li>
                 </ul>
                 <p class="sidenav__text">© Виноградник, 2023</p>
+                <div class="sidenav__text sidenav__copyright">Разработка сайта:
+                    <a href="https://t.me/liliia_kobzeva" class="copyright__link">@liliia_kobzeva</a>
+                </div>
             </div>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large">
