--- a/client/src/app/main-page/main-page.component.html
+++ b/client/src/app/main-page/main-page.component.html
@@ -7,17 +7,17 @@
               </h1>
               <ul class="social__media-icons">
                 <li>
-                  <a href="">
+                  <a href="Tel:+79135302209">
                     <i class="material-icons">call</i>
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="mailto:vinogradnikchurch@gmail.com">
                     <i class="material-icons">mail</i>
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="https://www.youtube.com/@user-be3qy1xt8h/videos">
                     <i class="material-icons">video_library</i>
                   </a>
                 </li>
