--- a/client/src/app/our-values-page/our-values-page.component.html
+++ b/client/src/app/our-values-page/our-values-page.component.html
@@ -3,21 +3,21 @@
       <div class="main__container">
         <div class="main__header">
           <h1 class="main__title">
-            <span class="main__title-custom">Виноградник</span> семейная церковь
+            <span class="main__title-custom">Виноградник</span> церковь
           </h1>
           <ul class="social__media-icons">
             <li>
-              <a href="">
+              <a href="Tel:+79135302209">
                 <i class="material-icons">call</i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="mailto:vinogradnikchurch@gmail.com">
                 <i class="material-icons">mail</i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://www.youtube.com/@user-be3qy1xt8h/videos">
                 <i class="material-icons">video_library</i>
               </a>
             </li>
